<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.jnet</groupId>
  <artifactId>jnet-algorithm-parent</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>

  <name>jnet-parent</name>
  <modules>
    <module>jnet-anno</module>
    <module>jnet-api</module>
    <module>jnet-biz</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <java.version>22</java.version>
    <jnet.version>1.0.0</jnet.version>
    <spring-cloud.version>2023.0.3</spring-cloud.version>
    <com-alibaba-cloud.version>2022.0.0.0</com-alibaba-cloud.version>
    <springboot.version>3.2.7</springboot.version>
    <prometheus.version>1.11.5</prometheus.version>
    <mybatis-spring-boot-starter.version>3.0.2</mybatis-spring-boot-starter.version>
    <mybatis-plus-spring-boot3-starter.version>3.5.5</mybatis-plus-spring-boot3-starter.version>
    <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
    <postgresql-connector-java.version>42.7.3</postgresql-connector-java.version>
    <commons-lang3.version>3.13.0</commons-lang3.version>
    <commons-collections4.version>4.4</commons-collections4.version>
    <commons-text.version>1.10.0</commons-text.version>
    <commons-compress.version>1.24.0</commons-compress.version>
    <commons-math.version>3.6.1</commons-math.version>
    <commons-io.version>2.14.0</commons-io.version>
    <commons-beanutils.version>1.9.4</commons-beanutils.version>
    <hutool-all.version>5.8.22</hutool-all.version>
    <lombok.version>1.18.30</lombok.version>
    <springdoc-openapi.version>2.2.0</springdoc-openapi.version>
    <jna.version>5.12.1</jna.version>
    <fastjson2.version>2.0.46</fastjson2.version>
    <redisson.version>3.25.0</redisson.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
      <!--<optional>true</optional>-->
    </dependency>
    <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-all</artifactId>
      <version>${hutool-all.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>${commons-collections4.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>${commons-text.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>${commons-compress.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>${commons-math.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <!--<version>${commons-beanutils.version}</version>-->
    </dependency>
  </dependencies>
  <pluginRepositories>
    <pluginRepository>
      <id>aliyun-plugin</id>
      <url>https://maven.aliyun.com/repository/public</url>
    </pluginRepository>
    <pluginRepository>
      <id>spring-snapshots</id>
      <url>https://repo.spring.io/snapshot</url>
    </pluginRepository>
    <pluginRepository>
      <id>spring-milestones</id>
      <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>aliyun</id>
      <url>https://maven.aliyun.com/repository/public</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <!-- spring-cloud-alibaba 依赖 -->
      <dependency>
        <groupId>com.alibaba.cloud</groupId>
        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
        <version>${com-alibaba-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${springboot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.jnet</groupId>
        <artifactId>jnet-api</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      
      <!-- 新的 Common 依赖包 -->
      <dependency>
        <groupId>com.jnet</groupId>
        <artifactId>common-core</artifactId>
        <version>${jnet.version}</version>
      </dependency>
      
      <dependency>
        <groupId>com.jnet</groupId>
        <artifactId>common-mybatis</artifactId>
        <version>${jnet.version}</version>
      </dependency>
      
      <dependency>
        <groupId>com.jnet</groupId>
        <artifactId>common-redis</artifactId>
        <version>${jnet.version}</version>
      </dependency>
      
      <dependency>
        <groupId>com.jnet</groupId>
        <artifactId>common-security</artifactId>
        <version>${jnet.version}</version>
      </dependency>
      <!-- 添加apache common依赖 -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${commons-text.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>${commons-compress.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-math3</artifactId>
          <version>${commons-math.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${commons-collections4.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>${commons-beanutils.version}</version>
      </dependency>
      <dependency>
        <groupId>org.redisson</groupId>
        <artifactId>redisson-spring-boot-starter</artifactId>
        <version>${redisson.version}</version>
      </dependency>
      <!-- PostgreSQL 数据库 -->
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql-connector-java.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
</project>
